--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[26, 83, 78, 8, 62, 31, 44, 40, 45, 82, 94, 63, 86, 77, 81, 97, 47, 2, 30, 0, 23, 28, 9, 5, 49, 27, 42, 60, 96, 50, 14, 43, 76, 61, 16, 17, 21, 72, 75, 68, 66, 88, 67, 48, 84, 90, 35, 51, 39, 10, 1, 15, 53, 79, 12, 32, 99, 19, 91, 92, 55, 70, 4, 58, 7, 64, 95, 34, 22, 59, 11, 65, 89, 71, 13, 36, 56, 3, 73, 87]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(100),80)\n",
+    "print (sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -77,11 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51, 75, 57, 75, 89, 49, 92, 82, 25, 68, 94, 63, 14, 67, 89, 73, 13, 30, 35, 67, 79, 43, 77, 77, 34, 62, 60, 29, 16, 5, 64, 32, 12, 7, 26, 37, 73, 12, 11, 41, 54, 71, 92, 64, 45, 89, 77, 40, 4, 17, 37, 58, 97, 9, 82, 6, 2, 70, 58, 42, 65, 10, 87, 81, 26, 77, 89, 79, 67, 42, 18, 5, 77, 14, 48, 46, 20, 12, 18, 54]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.sample(range(100),1)[0])\n",
+    "\n",
+    "\n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 8, 15, 19, 21, 22, 23, 27, 28, 31, 36, 39, 44, 47, 50, 53, 55, 56, 59, 61, 66, 72, 76, 78, 83, 84, 86, 88, 90, 91, 95, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{37, 6, 41, 46, 18, 20, 54, 25, 29, 57}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 7, 9, 10, 11, 12, 13, 14, 16, 17, 26, 30, 32, 34, 35, 40, 42, 43, 45, 48, 49, 51, 58, 60, 62, 63, 64, 65, 67, 68, 70, 71, 73, 75, 77, 79, 81, 82, 87, 89, 92, 94, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)\n"
    ]
   },
   {
@@ -165,11 +239,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135 135\n",
+      "80 80\n",
+      "55 55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "# La suma de las longitudes de set1 y set2 ha de ser igual a la suma de set 3 set 4 y 2 veces set 5\n",
+    "# La suma de las longitudes set 5 y set 4 ha de ser la longitud de set 2\n",
+    "# La suma de las longitudes set 5 y set 3 ha de ser la longitud de set 1\n",
+    "set1y2 = len(set1) + len(set2)\n",
+    "lenSet1 = len(set5) + len(set3)\n",
+    "lenSet2= len(set5) + len(set4)\n",
+    "lenTot = len(set4) + 2*len(set5) + len(set3)\n",
+    "print(set1y2,lenTot)\n",
+    "print(len(set1),lenSet1)\n",
+    "print(len(set2),lenSet2)\n"
    ]
   },
   {
@@ -181,11 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()\n",
+    "print(type(set6))"
    ]
   },
   {
@@ -197,11 +301,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 19, 21, 22, 23, 26, 27, 28, 30, 31, 32, 34, 35, 36, 39, 40, 42, 43, 44, 45, 47, 48, 49, 50, 51, 53, 55, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 70, 71, 72, 73, 75, 76, 77, 78, 79, 81, 82, 83, 84, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set1 y set6 son iguales\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "if set1==set6:\n",
+    "    print(\"set1 y set6 son iguales\")\n",
+    "    \n"
    ]
   },
   {
@@ -229,11 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todos los elementos de set3 se encuentran en set1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "if set2.issubset(set1):\n",
+    "    print(\"Todos los elementos de set2 se encuentran en set1\")\n",
+    "if set3.issubset(set1):\n",
+    "    print(\"Todos los elementos de set3 se encuentran en set1\")"
    ]
   },
   {
@@ -247,11 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son iguales\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "setu1= set3.union(set4,set5)\n",
+    "setu2 = set1.union(set2)\n",
+    "if(setu1==setu2):\n",
+    "    print(\"son iguales\")\n"
    ]
   },
   {
@@ -263,11 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 19, 21, 22, 23, 26, 27, 28, 30, 31, 32, 34, 35, 36, 39, 40, 42, 43, 44, 45, 47, 48, 49, 50, 51, 53, 55, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 70, 71, 72, 73, 75, 76, 77, 78, 79, 81, 82, 83, 84, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 99}\n",
+      "{1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 19, 21, 22, 23, 26, 27, 28, 30, 31, 32, 34, 35, 36, 39, 40, 42, 43, 44, 45, 47, 48, 49, 50, 51, 53, 55, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 70, 71, 72, 73, 75, 76, 77, 78, 79, 81, 82, 83, 84, 86, 87, 88, 89, 90, 91, 92, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1)\n",
+    "set1.pop()\n",
+    "\n",
+    "print(set1)\n"
    ]
   },
   {
@@ -283,12 +446,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 7, 8, 10, 12, 13, 14, 15, 16, 17, 22, 23, 26, 27, 28, 30, 32, 34, 35, 36, 40, 42, 43, 44, 45, 47, 48, 50, 53, 55, 56, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 75, 76, 77, 78, 82, 83, 84, 86, 87, 88, 90, 92, 94, 95, 96, 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "set1 = set1.difference(list_to_remove)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
