--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('I', 'I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
     "\n",
     "tupla1 = list(tup)\n",
     "\n",
-    "tupla1.extend([\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"])\n",
+    "tupla1.extend([\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"])\n",
     "\n",
     "tup = tuple(tupla1)\n",
     "\n",
@@ -126,11 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "tup1 = (tup[:4]) \n",
+    "tup2 = (tup[4:8])\n",
+    "\n",
+    "print (tup1, tup2)\n"
    ]
   },
   {
@@ -144,11 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "print (tup3)\n"
    ]
   },
   {
@@ -160,11 +181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "x=len(tup1)\n",
+    "y=len(tup2)\n",
+    "x + y == len(tup3)\n"
    ]
   },
   {
@@ -176,11 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print (tup3.index(\"h\"))"
    ]
   },
   {
@@ -200,11 +242,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print (True)\n",
+    "    else:\n",
+    "        print (False)"
    ]
   },
   {
@@ -218,12 +278,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:1\n",
+      "b:0\n",
+      "c:1\n",
+      "d:0\n",
+      "e:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print (\"{}:{}\" .format(i,(tup3.count(i))))\n",
+    "    else: \n",
+    "        print (\"{}:{}\" .format(i,(tup3.count(i))))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
